# Customer-service

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
customer_service/: .env.example  manage.py
customer_service/appointment/: forms.py  models.py  services.py  urls.py  views.py
customer_service/appointment/migrations/: 0001_initial.py  0002_initial.py
customer_service/authentication/: adapter.py  forms.py  models.py  services.py  urls.py  views.py
customer_service/authentication/migrations/: 0001_initial.py
customer_service/common/config/: settings.py
customer_service/common/custom_types/: custom_types.py
customer_service/common/permissions/: permissions.py
customer_service/common/pydantic_models/: location.py  user.py
customer_service/core/appointment/: interfaces.py  models.py  use_cases.py
customer_service/core/google_calendar/: interfaces.py  models.py  services.py
customer_service/core/schedule/: interfaces.py  models.py  use_cases.py
customer_service/core/utils/: google_utils.py
customer_service/customer_service/: apps.py  asgi.py  dependency_container.py  settings.py  urls.py  wsgi.py
customer_service/data_access/appointment/: interfaces.py  models.py  services.py
customer_service/data_access/schedule/: interfaces.py  models.py  services.py
customer_service/data_access/user/: interfaces.py  services.py
customer_service/integrations/google/: enums.py  interfaces.py  services.py
customer_service/templates/: base.html  home.html
customer_service/templates/appointment/: appointment_confirm_delete.html  appointment_list.html  booking.html
customer_service/templates/registration/: login.html  signup.html  signup_form_customer.html  signup_form_worker.html
customer_service/templates/user/: account.html  change_password.html  settings.html  worker_detail.html  workers.html
customer_service/templates/worker/: location_confirm_delete.html  location_form.html  location_list.html  schedule_form.html  schedule_list.html  workers.html
customer_service/worker/: forms.py  models.py  urls.py  views.py
customer_service/worker/migrations/: 0001_initial.py
